--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
             <h2>Challenge 1: Your Age in Days</h2>
             <div class="flex-box-container-1">
                 <div>
-                    <button class="challenge1">Click me</button>
+                    <button class="challenge1" onclick="ageInDays()">Click me</button>
                 </div>
                 <div>
                     <button class="challenge1a">Reset</button>
                 </div>
+           </div>
+           <div class="flex-box-container-1">
+               <div id="result"></div>
            </div>
             
         </div>
