--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
         </div>
         <div class="challenge-3">
             <h2>Challenge 3: Rock, Paper, Scissors</h2>
-            
+            <div class="flex-box-container-3" id="flex-box-rps-div">
+                <img id="rock" src="http://images.clipartpanda.com/rock-clipart-clipart-harvestable-resources-rock.png" alt="rock" width="150" height="150" onclick="rpsGame(this)">
+                <img id="paper" src="http://images.clipartpanda.com/paper-clip-art-niEBBqMiA.svg" alt="paper" width="150" height="150" onclick="rpsGame(this)">
+                <img id="scissors" src="http://images.clipartpanda.com/scissors-clip-art-nicubunu_Scissors.png" alt="Scissors" width="150" height="150" onclick="rpsGame(this)">
+            </div>
         </div>
         <div class="challenge-4">
             <h2>Challenge 4: Your Age in Days</h2>
