--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <img id="scissors" src="http://images.clipartpanda.com/scissors-clip-art-nicubunu_Scissors.png" alt="Scissors" width="150" height="150" onclick="rpsGame(this)">
             </div>
         </div>
-        <div class="challenge-4">
+        <!-- <div class="challenge-4">
             <h2>Challenge 4: Your Age in Days</h2>
             <button id=challenge1>Click me</button>
             <button id=challenge1a>Reset</button>
@@ -48,7 +48,7 @@
             <h2>Challenge 5: Your Age in Days</h2>
             <button id=challenge1>Click me</button>
             <button id=challenge1a>Reset</button>
-        </div>
+        </div> -->
     </div>
 
 
